More on function calling, Quarkus update to 3.3.0